--- a/workLayout/style.css
+++ b/workLayout/style.css
@@ -4,7 +4,7 @@
 
 @font-face {
     font-family: 'Rosnou';
-    src: url("fonts/Rosnou.ttf");
+    src: url("../fonts/Rosnou.ttf");
     font-weight: normal;
     font-style: normal;
 }
