--- a/modal/style.css
+++ b/modal/style.css
@@ -13,11 +13,19 @@
     font-style: normal;
 }
 
+.btn-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+}
+
 .modal-btn {
-    border: none;
+    border: 2px solid #000;
     cursor: pointer;
-    background-color: #000;
-    color: #fff;
+    background-color: #ece8e8;
+    opacity: 0.6;
+    color: #000;
     padding: 10px;
 }
 
@@ -29,29 +37,19 @@
     bottom: 0;
     background-color: rgba(0, 0, 0, 0.7);
     display: flex;
-    align-items: center;
+    align-items: flex-start;
     justify-content: center;
     height: 100vh;
     width: 100%;
     opacity: 0;
     visibility: hidden;
-    transition: all 0.3s ease-in-out;
-}
-
-.modal {
-    background-color: #fff;
-    width: 300px;
-    height: 300px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    display: none;
+    transition: 0.3s;
 }
 
 .modal-overlay--visible {
     opacity: 1;
     visibility: visible;
-    transition: all 0.3s ease-in-out;
+    transition: 0.3s;
 }
 
 .modal--visible {
